added entities in the project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=airBnbApp
+
+#DB configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/airBnb
+spring.datasource.username=postgres
+spring.datasource.password=Maurya@007
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.formate_sql=true
+
