added HotelController, dto, repositories, Services and exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.application.name=airBnbApp
 spring.datasource.url=jdbc:postgresql://localhost:5432/airBnb
 spring.datasource.username=postgres
 spring.datasource.password=Maurya@007
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.formate_sql=true
 
+server.servlet.context-path=/api/v1
